# ray_tracing_in1weekend

./: .gitignore  CMakeLists.txt  README.md  main.cpp  makefile  output.ppm  pull.bat  pull.txt  push.bat  run.bat  run.sh  新建 文本文档.txt
conf/: camera.xml  renderer.xml  scene.xml
include/: ThreadPool.h  aabb.h  axis_aligned_rect.h  box.h  bvh.h  camera.h  constant_medium.h  hitable.h  hitable_list.h  material.h  movingSphere.h  myMath.h  perlin.h  ray.h  rayTracing.h  renderer.h  sphere.h  texture.h  transform.h  vec3.h
include/hitable/: all.h  box.h  constant_medium.h  hitable.h  hitable_list.h
include/render/: ray.h  renderer.h
include/texture/: texture.h
include/tool/: parse.h
linux/: run.sh
log/: runLog.txt
oldMain/: bvh.cpp  emitted.cpp  finalScene.cpp  manySphere.cpp  metal_fuzz.cpp  texture.cpp  twoSphere.cpp
output/: .ppm  hello.ppm  maasd.ppm  out.ppm  output.ppm  output_dielectric.ppm  output_diffuse.ppm  output_manySphere.ppm  output_metal.ppm  output_metal_fuzz.ppm
src/: MC.cpp  MSAA.cpp  aabb.cpp  axis_aligned_rect.cpp  box.cpp  bvh.cpp  camera.cpp  constant_medium.cpp  cornellBox.cpp  dielectric.cpp  finalScene.cpp  hitable.cpp  hitable_list.cpp  main.cpp  manySphere.cpp  material.cpp  metal.cpp  movingSphere.cpp  moving_sphere.cpp  myMath.cpp  output.ppm  ray.cpp  renderer.cpp  sphere.cpp  test.cpp  texture.cpp  trans.cpp  transform.cpp  twoPerlinSphere.cpp
src/acceleration/: aabb.cpp  axis_aligned_rect.cpp  bvh.cpp
src/hitable/: box.cpp  constant_medium.cpp  hitable_list.cpp  movingSphere.cpp  sphere.cpp  transform.cpp
src/math/: myMath.cpp  perlin.cpp
src/oldMain/: cornellBox.cpp  dielectric.cpp  diffuse.cpp
src/render/: renderer.cpp
src/tool/: parse.cpp
